I forgot I did something twice.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
     <p>February 10, 2026</p>
 
-    <img src="media/ch03_image-to-map.jpg"  usemap="#imagemap">
-
-  <img src="ch03_image-to-map.jpg" alt="Provided Image" usemap="#image-map">
+    <img src="media/ch03_image-to-map.jpg" alt="Provided Image" usemap="#imagemap">
 
 <map name="image-map">
     <area target="_self" alt="Cape Fear Community College" title="Cape Fear Community College" href="https://cfcc.edu/" coords="600,1520,1249,1736" shape="rect">
